--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -136,18 +136,18 @@
         </div>
         <div id="login-window" class="slide-menu">
             <form>
-            <div>
-                <span>Username :</span>
-                <input type="text">
-            </div>
-            <div>
-                <span>Password (</span><a href="">Forgot?</a><span>):</span>
-                <input type="text">
-            </div>
-            <div>
-                <input type="checkbox"><span>Keep me logged in</span>
-                <input type="submit">
-            </div>
+                <div>
+                    <span>Username :</span>
+                    <input type="text">
+                </div>
+                <div>
+                    <span>Password (</span><a href="">Forgot?</a><span>):</span>
+                    <input type="text">
+                </div>
+                <div>
+                    <input type="checkbox"><span>Keep me logged in</span>
+                    <input type="submit">
+                </div>
             </form>
         </div>
     </div>
@@ -180,7 +180,7 @@
             <span>Language</span>
             <ul>
                 <li><a href="/">English</a></li>
-                <li><a href="/">Ukrainian</a></li>
+                <li><a href="/">Українська</a></li>
                 <li><a href="/">German</a></li>
             </ul>
         </div>
