--- a/draft_01_main_chosed.html
+++ b/draft_01_main_chosed.html
@@ -186,7 +186,7 @@
             <span>Language</span>
             <ul>
                 <li><a href="/">English</a></li>
-                <li><a href="/">Ukrainian</a></li>
+                <li><a href="/">Українська</a></li>
                 <li><a href="/">German</a></li>
             </ul>
         </div>
