--- a/event.html
+++ b/event.html
@@ -39,7 +39,6 @@
         <div id="username" class="login">
             <div><img src="images/user-icon.png"></div>
             <div><a>Username</a></div>
-            <div><img class="top-white-arrow" src="images/user-wite-arrow.png"></div>
         </div>
 
     </div>
@@ -50,23 +49,21 @@
     <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
 </div>
 <div class="content-right-sidebar">
-    <div id="user-info-left" class="white user-info-right-sidebar shadow-border">
+    <div id="user-info-left" class="white  user-info-right-sidebar shadow-border padding-l20">
         <img src="userimages/avatar01.png"
              class="avatar">
-        <div><a href="/" class="activity-user-link username-mid">Username</a></div>
-        <div>
-            <span class="big-digit">3&nbsp;</span>
-            <span class="small-text author">автор</span>
+        <div ><a href="/" class="activity-user-link username-mid">Username</a></div>
+        <div >
+            <span class="big-digit">3&nbsp;</span><span class="small-text author">автор</span>
         </div>
         <div>
             <span class="big-digit">12&nbsp;</span>
             <span class="small-text participant"> участник</span>
         </div>
-
     </div>
     <div id="user-events"
          class="shadow-border">
-        <div class="user-events-caption"><span>Еще события </span><span class="user-name">Username</span></div>
+        <div class="user-events-caption"><span>Еще события Username</span></div>
         <div class="user-event-item">
             <img src="userimages/event-small0001.png">
 
@@ -136,48 +133,58 @@
 
     </div>
     <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
+
 </div>
 <div class="content-page">
-    <div id="e-caption"><span>Street Art Utopia</span></div>
-    <div class="event-more-b1">
-        <div id="e-image">
-            <img src="userimages/event0001.png">
+
+<div id="e-caption">
+    <span>Street Art Utopia</span>
+
+</div>
+
+<div class="owner-top-wrp shadow-border coment-list-wrapper">
+    <div class="events-wrp">
+        <div class="event-more-b1">
+            <div id="e-image">
+                <img src="userimages/event0001.png">
+            </div>
+
         </div>
-        <div class="content-footer event-more-join shadow-border">
-            <span>Join event</span>
+        <div class="event-more-b2">
+            <div id="e-date">
+                <img src="images/filterdate.png"><span>30 апр - Май 03,2012</span>
+            </div>
+            <div id="e-location">
+                <img src="images/filterlocation.png"><span>Киев, Клуб"Бинго"</span>
+            </div>
+            <div class="e-category">
+                <img src="images/dir-tree-icon.png"><span>Развлечения</span>
+            </div>
+            <div class="e-site">
+                <img src="images/filtertags.png"><span>www.Bingo.com.ua</span>
+            </div>
+            <div class="e-people">
+                <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
+            </div>
+            <div class="event-invite">
+                <a id="invite"><sup>+</sup>пригласить</a>
+                <span>|</span>
+                <a id="inspect">смотреть</a>
+            </div>
         </div>
+
     </div>
-    <div class="event-more-b2 usual">
-        <div class="e-date">
-            <img src="images/filterdate.png"><span>30 апр - Май 03,2012</span>
-        </div>
-        <div class="e-location">
-            <img src="images/filterlocation.png"><span>Киев, Клуб "Бинго"</span>
-        </div>
-        <div class="e-category">
-            <img src="images/dir-tree-icon.png"><span>Развлечения</span>
-        </div>
-        <div class="e-site">
-            <img src="images/filtertags.png"><span>www.Bingo.com.ua</span>
-        </div>
-        <div class="e-people">
-            <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
-        </div>
-        <div class="event-invite">
-            <a id="invite"><sup>+</sup>пригласить</a>
-            <span>|</span>
-            <a id="inspect">смотреть</a>
-        </div>
+    <div class="event-owner-selects-wrapper">
+        <button>Пойду</button>
+        <button>Напомнить</button>
     </div>
-    <div id="e-text" class="usual"><span>Breaking Bad ( «Во все тяжкие» ), возможно, уже и не жилец в
-                  этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу, продолжает расти аудитория.
+    <div id="e-text" class="">
+                  <span>Breaking Bad («Во все тяжкие»), возможно, уже и не жилец в
+                  этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.
 
                   В это воскресенье сериал превзошел свои предыдущие рекорды, которые были поставлены,
-            когда в эфир вышли премьерные эпизоды четвертого и пятого сезонов. Последнюю серию посмотрело
-
-            3
-            ...</span>
-
+                  когда в эфир вышли премьерные эпизоды четвертого и пятого сезонов. Последнюю серию посмотрело 3 ...
+                  </span>
     </div>
     <div id="share-img"
          class="share">
@@ -187,144 +194,149 @@
         <a href=""><img src="images/vk.png"></a>
         <a href=""><img src="images/mail.png"></a>
     </div>
-    <div id="content-all-comments" class="usual">
-        <div class="content-comments-header">
-            <a href="/">Коментарии(39)</a>
-            <a class="comment-notification-link" href="/">получать уведомления</a>
-        </div>
-        <div class="shadow-border coment-list-wrapper">
-            <ol id="content-comments-list">
-                <li id="comment-1">
-                    <div class="usual comment-wrapper">
-                        <div class="usual full-wide">
-                           <img src="images/people-icon.png"
-                                 class="ava-icon">
-                            <br>
-                            <a href="">user</a>
-                            <span class="comment-header">13 апреля 2012,08:13</span>
-                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
-                        </div>
-                        <div class="usual ">
+</div>
+
+<div id="content-all-comments" class="usual">
+    <div class="content-comments-header">
+        <a href="/">Коментарии(39)</a>
+        <a class="comment-notification-link" href="/">получать уведомления</a>
+    </div>
+    <div class="shadow-border coment-list-wrapper">
+        <ol id="content-comments-list">
+            <li id="comment-1">
+                <div class="usual comment-wrapper">
+                    <div class="usual full-wide">
+                        <img src="images/people-icon.png"
+                             class="ava-icon">
+                        <br>
+                        <a href="">user</a>
+                        <span class="comment-header">13 апреля 2012,08:13</span>
+                        <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                    </div>
+                    <div class="usual ">
                             <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET
                     </span>
-                        </div>
                     </div>
-                </li>
-                <li id="comment-2">
-                    <div class="usual comment-wrapper">
-                        <div class="usual full-wide">
-                            <img src="images/people-icon.png"
-                                 class="ava-icon">
-                            <br>
-                            <a href="">fdgdfg</a>
-                            <span class="comment-header">13 апреля 2012,08:13</span>
-                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
-                        </div>
-                        <div class="usual"><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET
+                </div>
+            </li>
+            <li id="comment-2">
+                <div class="usual comment-wrapper">
+                    <div class="usual full-wide">
+                        <img src="images/people-icon.png"
+                             class="ava-icon">
+                        <br>
+                        <a href="">fdgdfg</a>
+                        <span class="comment-header">13 апреля 2012,08:13</span>
+                        <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                    </div>
+                    <div class="usual"><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET
                     </span>
-                        </div>
                     </div>
-                    <ol>
-                        <li id="comment-3">
-                            <div class="usual comment-wrapper">
-                                <div class="usual full-wide">
-                                    <img src="images/people-icon.png"
-                                         class="ava-icon">
-                                    <br>
-                                    <a href="">fsrs</a>
-                                    <span class="comment-header">13 апреля 2012,08:13</span>
-                                    <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
-                                </div>
-                                <div class="usual "><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
-
-                                </div>
+                </div>
+                <ol>
+                    <li id="comment-3">
+                        <div class="usual comment-wrapper">
+                            <div class="usual full-wide">
+                                <img src="images/people-icon.png"
+                                     class="ava-icon">
+                                <br>
+                                <a href="">fsrs</a>
+                                <span class="comment-header">13 апреля 2012,08:13</span>
+                                <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
                             </div>
-                        </li>
-                        <li id="comment-4">
-                            <div class="usual comment-wrapper">
-                                <div class="usual full-wide">
-                                    <img src="images/people-icon.png"
-                                         class="ava-icon">
-                                    <br>
-                                    <a href="">fsrs</a>
-                                    <span class="comment-header">13 апреля 2012,08:13</span>
-                                    <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
-                                </div>
-                                <div class="usual "><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+                            <div class="usual "><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
 
-                                </div>
                             </div>
-                        </li>
-                    </ol>
-                </li>
-                <li id="comment-5">
-                    <div class="usual comment-wrapper">
-                        <div class="usual  full-wide">
-                            <img src="images/people-icon.png"
-                                 class="ava-icon">
-                            <br>
-                            <a href="">fsrs</a>
-                            <span class="comment-header">13 апреля 2012,08:13</span>
-                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
                         </div>
-                        <div class="usual ">
-                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+                    </li>
+                    <li id="comment-4">
+                        <div class="usual comment-wrapper">
+                            <div class="usual full-wide">
+                                <img src="images/people-icon.png"
+                                     class="ava-icon">
+                                <br>
+                                <a href="">fsrs</a>
+                                <span class="comment-header">13 апреля 2012,08:13</span>
+                                <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                            </div>
+                            <div class="usual "><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+
+                            </div>
                         </div>
+                    </li>
+                </ol>
+            </li>
+            <li id="comment-5">
+                <div class="usual comment-wrapper">
+                    <div class="usual  full-wide">
+                        <img src="images/people-icon.png"
+                             class="ava-icon">
+                        <br>
+                        <a href="">fsrs</a>
+                        <span class="comment-header">13 апреля 2012,08:13</span>
+                        <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
                     </div>
-                </li>
-                <li id="comment-6">
-                    <div class="usual comment-wrapper">
-                        <div class="usual  full-wide">
-                            <img src="images/people-icon.png"
-                                 class="ava-icon">
-                            <br>
-                            <a href="">fsrs</a>
-                            <span class="comment-header">13 апреля 2012,08:13</span>
-                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
-                        </div>
-                        <div class="usual ">
-                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
-                        </div>
+                    <div class="usual ">
+                        <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
                     </div>
-                </li>
-                <li id="comment-7">
-                    <div class="usual comment-wrapper last">
-                        <div class="usual  full-wide">
-                            <img src="images/people-icon.png"
-                                 class="ava-icon">
-                            <br>
-                            <a href="">fsrs</a>
-                            <span class="comment-header">13 апреля 2012,08:13</span>
-                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
-                        </div>
-                        <div class="usual">
-                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
-                        </div>
+                </div>
+            </li>
+            <li id="comment-6">
+                <div class="usual comment-wrapper">
+                    <div class="usual  full-wide">
+                        <img src="images/people-icon.png"
+                             class="ava-icon">
+                        <br>
+                        <a href="">fsrs</a>
+                        <span class="comment-header">13 апреля 2012,08:13</span>
+                        <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
                     </div>
-                </li>
-            </ol>
-            <div style="height:1px;overflow:hidden;clear:both;"></div>
-        </div>
-        <div class="new-comment">
-            <textarea class="shadow-border" placeholder="submit a comment"></textarea>
-            <input type="submit" value="Post">
-        </div>
+                    <div class="usual ">
+                        <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+                    </div>
+                </div>
+            </li>
+            <li id="comment-7">
+                <div class="usual comment-wrapper last">
+                    <div class="usual  full-wide">
+                        <img src="images/people-icon.png"
+                             class="ava-icon">
+                        <br>
+                        <a href="">fsrs</a>
+                        <span class="comment-header">13 апреля 2012,08:13</span>
+                        <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                    </div>
+                    <div class="usual">
+                        <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+                    </div>
+                </div>
+            </li>
+        </ol>
+        <div style="height:1px;overflow:hidden;clear:both;"></div>
     </div>
-    <div style="height:1px;overflow:hidden;clear:both;"></div>
+    <div class="new-comment">
+        <textarea class="shadow-border" placeholder="submit a comment"></textarea>
+        <input type="submit" value="Post">
+    </div>
+</div>
+<div style="height:1px;overflow:hidden;clear:both;">
+
+</div>
 </div>
 
 
 <div id="logged-menu" class="slide-menu user-menu">
-
+    <img src="userimages/avatar01.png">
     <div class="">
         <a>Настройки</a>
     </div>
     <div class="">
+        <a>Профиль</a>
+    </div>
+    <div class="">
         <a>Выход</a>
     </div>
-
 </div>
-
 </div>
 <div class="footer">
     <div class="footer-menu">
@@ -355,13 +367,10 @@
         <span>Language</span>
         <ul>
             <li><a href="/">English</a></li>
-            <li><a href="/">Ukrainian</a></li>
+            <li><a href="/">Українська</a></li>
             <li><a href="/">German</a></li>
         </ul>
     </div>
-</div>
-<div id="quest">
-
 </div>
 </div>
 </body>
