--- a/event_iew_owner.html
+++ b/event_iew_owner.html
@@ -59,7 +59,6 @@
         </div>
         <div>
             <a href="" class=" big-digit active-events">5</a>
-
         </div>
 
     </div>
@@ -138,83 +137,89 @@
 
 </div>
 <div class="content-page">
+
     <div id="e-caption">
         <span>Street Art Utopia</span>
 
         <div class="event-edit-button"><a href="">редактировать</a></div>
     </div>
-    <div class="events-wrp">
-    <div class="event-more-b1">
-        <div id="e-image">
-            <img src="userimages/event0001.png">
-        </div>
 
-    </div>
-    <div class="event-more-b2">
-        <div id="e-date">
-            <img src="images/filterdate.png"><span>30 апр - Май 03,2012</span>
-        </div>
-        <div id="e-location">
-            <img src="images/filterlocation.png"><span>Киев, Клуб"Бинго"</span>
-        </div>
-        <div class="e-category">
-            <img src="images/dir-tree-icon.png"><span>Развлечения</span>
-        </div>
-        <div class="e-site">
-            <img src="images/filtertags.png"><span>www.Bingo.com.ua</span>
-        </div>
-        <div class="e-people">
-            <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
-        </div>
-        <div class="event-invite">
-            <a id="invite"><sup>+</sup>пригласить</a>
-            <span>|</span>
-            <a id="inspect">смотреть</a>
-        </div>
-    </div>
+    <div class="owner-top-wrp shadow-border coment-list-wrapper">
+        <div class="events-wrp">
+            <div class="event-more-b1">
+                <div id="e-image">
+                    <img src="userimages/event0001.png">
+                </div>
 
-    </div>
-    <div class=" event-owner-selects-wrapper">
-        <div class="owner-select usual"> <nobr>
-            <span> мой статус:</span>
-            <select class="event-owner-select"  name="go">
+            </div>
+            <div class="event-more-b2">
+                <div id="e-date">
+                    <img src="images/filterdate.png"><span>30 апр - Май 03,2012</span>
+                </div>
+                <div id="e-location">
+                    <img src="images/filterlocation.png"><span>Киев, Клуб"Бинго"</span>
+                </div>
+                <div class="e-category">
+                    <img src="images/dir-tree-icon.png"><span>Развлечения</span>
+                </div>
+                <div class="e-site">
+                    <img src="images/filtertags.png"><span>www.Bingo.com.ua</span>
+                </div>
+                <div class="e-people">
+                    <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
+                </div>
+                <div class="event-invite">
+                    <a id="invite"><sup>+</sup>пригласить</a>
+                    <span>|</span>
+                    <a id="inspect">смотреть</a>
+                </div>
+            </div>
 
-                <option value="Иду">Иду</option>
-                <option selected value="Не иду">Не иду</option>
-                <option value="Не знаю">Не знаю</option>
-
-            </select> </nobr>
-            <img class="arrow" src="images/list-black-arrow.png">
         </div>
-        <div class="owner-select usual"> <nobr>
-            <span>напомнить:</span>
-            <select class="event-owner-select"  name="time">
-                <option value="Иду">3 дня</option>
-                <option selected value="Не иду">5 дней</option>
-                <option value="Не знаю">7 дней</option>
-            </select>
+        <div class="event-owner-selects-wrapper">
+            <div class="owner-select usual">
+                <nobr>
+                    <span> мой статус:</span>
+                    <select class="event-owner-select" name="go">
 
-        </nobr>
-            <img class="arrow" src="images/list-black-arrow.png">
+                        <option value="Иду">Иду</option>
+                        <option selected value="Не иду">Не иду</option>
+                        <option value="Не знаю">Не знаю</option>
+
+                    </select></nobr>
+
+            </div>
+            <div class="owner-select ">
+                <nobr>
+                    <span>напомнить:</span>
+                    <select class="event-owner-select" name="time">
+                        <option value="Иду">3 дня</option>
+                        <option selected value="Не иду">5 дней</option>
+                        <option value="Не знаю">7 дней</option>
+                    </select>
+
+                </nobr>
+            </div>
+
         </div>
-
-    </div>
-    <div id="e-text" class="usual">
+        <div id="e-text" class="">
                   <span>Breaking Bad («Во все тяжкие»), возможно, уже и не жилец в
                   этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.
 
                   В это воскресенье сериал превзошел свои предыдущие рекорды, которые были поставлены,
                   когда в эфир вышли премьерные эпизоды четвертого и пятого сезонов. Последнюю серию посмотрело 3 ...
                   </span>
+        </div>
+        <div id="share-img"
+             class="share">
+            Shere&nbsp;this&nbsp;Event&nbsp;:&nbsp;
+            <a href=""><img src="images/tweet.png"></a>
+            <a href=""><img src="images/facebook.png"></a>
+            <a href=""><img src="images/vk.png"></a>
+            <a href=""><img src="images/mail.png"></a>
+        </div>
     </div>
-    <div id="share-img"
-         class="share">
-        Shere&nbsp;this&nbsp;Event&nbsp;:&nbsp;
-        <a href=""><img src="images/tweet.png"></a>
-        <a href=""><img src="images/facebook.png"></a>
-        <a href=""><img src="images/vk.png"></a>
-        <a href=""><img src="images/mail.png"></a>
-    </div>
+
     <div id="content-all-comments" class="usual">
         <div class="content-comments-header">
             <a href="/">Коментарии(39)</a>
@@ -345,14 +350,16 @@
 
 
 <div id="logged-menu" class="slide-menu user-menu">
-
+    <img src="userimages/avatar01.png">
     <div class="">
         <a>Настройки</a>
     </div>
     <div class="">
+        <a>Профиль</a>
+    </div>
+    <div class="">
         <a>Выход</a>
     </div>
-
 </div>
 </div>
 <div class="footer">
@@ -384,7 +391,7 @@
         <span>Language</span>
         <ul>
             <li><a href="/">English</a></li>
-            <li><a href="/">Ukrainian</a></li>
+            <li><a href="/">Українська</a></li>
             <li><a href="/">German</a></li>
         </ul>
     </div>
