--- a/profile.html
+++ b/profile.html
@@ -174,14 +174,16 @@
 
 
         <div id="logged-menu" class="slide-menu user-menu">
-
+            <img src="userimages/avatar01.png">
             <div class="">
                 <a>Настройки</a>
             </div>
             <div class="">
+                <a>Профиль</a>
+            </div>
+            <div class="">
                 <a>Выход</a>
             </div>
-
         </div>
     </div>
     <div class="footer">
@@ -213,7 +215,7 @@
             <span>Language</span>
             <ul>
                 <li><a href="/">English</a></li>
-                <li><a href="/">Ukrainian</a></li>
+                <li><a href="/">Українська</a></li>
                 <li><a href="/">German</a></li>
             </ul>
         </div>
