--- a/recover.html
+++ b/recover.html
@@ -34,27 +34,16 @@
     </div>
     <div class="content">
         <div class="content-header">
-            <div class="content-header-active last"><a href="#">Registration form</a></div>
+            <div class="content-header-active last"><a href="#">Password recovery</a></div>
             </div>
 
         <form  method="post" id="register" action="/">
-            <h2 class="reg-inputs">Sign Up</h2>
+            <h2 class="reg-inputs">Forgot password?</h2>
             <div class="shadow-border reg-inputs">
-                <span>Dелаем форму шире; размещаем текст над формой (“Sign Up”); выкидываем лишние поля в форме;
-- добавляем текстовый блок в форме ;
-</span>
-                <input placeholder="E-mail" id="email" name="email" type="email" value="" tabindex="3" >
+                <span>Dелаем форму шире; размещаем текст над формой (“Sign Up”); выкидываем лишние поля в фор</span>
+                <input placeholder="Registered email" id="email" name="email" type="email" value="" tabindex="3" >
                 <div id="terms">
-                    <div class="">
-                        <div>
-                            <p>By registering you agree to our <a href="/" > terms of use </a></p>
-                        </div>
-                        <div>
-                            <input id="news" name="news" type="checkbox" checked="checked" >
-                            <label for="news">Send me occasional news and tips</label>
-                        </div>
-                    </div>
-                    <input type="submit" class="submit" value="Sign up!" tabindex=8 />
+                    <input type="submit" class="submit" value="Send email" tabindex=8 />
                 </div>
             </div>
         </form>
