--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -271,16 +271,17 @@
 
 
 <div id="logged-menu" class="slide-menu user-menu">
-
+    <img src="userimages/avatar01.png">
     <div class="">
         <a>Настройки</a>
     </div>
     <div class="">
+        <a>Профиль</a>
+    </div>
+    <div class="">
         <a>Выход</a>
     </div>
-
 </div>
-
 </div>
 
 <div class="footer">
@@ -312,7 +313,7 @@
         <span>Language</span>
         <ul>
             <li><a href="/">English</a></li>
-            <li><a href="/">Ukrainian</a></li>
+            <li><a href="/">Українська</a></li>
             <li><a href="/">German</a></li>
         </ul>
     </div>
